fixed localhost hard code

--- a/client/main.html
+++ b/client/main.html
@@ -51,7 +51,7 @@
       </tr>
       {{#EasySearch.Each index=batteryIndex}}
         <tr>
-          <td><a href="http://localhost:3000/api/batteryList/{{_id}}">{{serialNumber}}</a></td>
+          <td><a href="/api/batteryList/{{_id}}">{{serialNumber}}</a></td>
           <td>{{deviceId}}</td>
           <td>{{batteryPercentage}}</td>
           <td>{{batteryChargingStatus}}</td>
