1. Added Save button 2. Changed REST API call from POST to GET 3. Code cleanup

--- a/client/main_static.html
+++ b/client/main_static.html
@@ -179,5 +179,9 @@
   <div id="chart">
   	
   </div>
+  <!-- Save reports button -->
+  <div style="float:right;margin:5px;">
+	<input id="filter-save-reports-button-submit" class="btn btn-primary" type="submit" value="Submit">
+  </div>
 </body>
 </html>
