1. UI changes 2. Added Save reports functionality

--- a/client/main_static.html
+++ b/client/main_static.html
@@ -180,8 +180,8 @@
   	
   </div>
   <!-- Save reports button -->
+	<input id="filter-save-reports-button-submit" class="btn btn-primary" type="submit" value="Save">
   <div style="float:right;margin:5px;">
-	<input id="filter-save-reports-button-submit" class="btn btn-primary" type="submit" value="Submit">
   </div>
 </body>
 </html>
